fix: prevent type tag wrap

--- a/frontend/src/components/SingleExampleEvaluation/UseCaseTypeBadge.module.scss
+++ b/frontend/src/components/SingleExampleEvaluation/UseCaseTypeBadge.module.scss
@@ -1,3 +1,3 @@
-.badge-padding :global .cds--tag span {
-  padding: 0.5rem;
+.usecase-tag{
+  white-space: nowrap;
 }
